--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ encoding: utf-8
 
 exclude: [README.md, LICENSE, CNAME, start.bat]
 include: [.htaccess]
-show_drafts: true
+show_drafts: false
 
 sass:
   sass_dir: scss
